# protocol

./: .gitignore  .travis.yml  CMakeLists.txt  README.md  RT-Protokoll_Server-Client.xlsx  build.sh  build_linux.sh  build_win.bat  clean.sh  install_protobuf.sh
bin_linux/: install.sh
bin_win/: libprotobuf-lite.lib
csharp_include/: Google.Protobuf.csproj  Google.Protobuf.sln  Google.Protobuf.userprefs
src/: emergencies.proto  protocol.proto  server.proto  user.proto  vehicle.proto
