CMAKE_MINIMUM_REQUIRED(VERSION 3.1)

PROJECT(protocol)

SET(EXECUTABLE_OUTPUT_PATH ${PROJECT_SOURCE_DIR}/bin)
SET(LIBRARY_OUTPUT_PATH ${PROJECT_SOURCE_DIR}/lib)

SET(PROJECT_SOURCE ${CMAKE_CURRENT_SOURCE_DIR}/cpp_out)

INCLUDE_DIRECTORIES(${CMAKE_CURRENT_SOURCE_DIR}/cpp_include)

IF(WIN32)
#	ADD_DEFINITIONS(-D_WIN32_WINNT=0x0501)
	LINK_DIRECTORIES(${CMAKE_CURRENT_SOURCE_DIR}/bin_win)
ENDIF()

if(UNIX)
	SET(CMAKE_CXX_FLAGS "${CMAKE_CXX_FLAGS} -std=c++11")
	SET(CMAKE_CXX_FLAGS "${CMAKE_CXX_FLAGS} -Wall -Wno-sign-compare -Werror")
endif()

FILE(GLOB _SOURCES ${PROJECT_SOURCE}/*.cc)
FILE(GLOB _HEADERS ${PROJECT_SOURCE}/*.h)
SOURCE_GROUP("Header Files" FILES ${_HEADERS})

ADD_LIBRARY(${PROJECT_NAME} ${_SOURCES} ${_HEADERS})

